# chroma-memory-index

./: .gitignore  CHANGELOG.md  ORIGINS.md  README.md  pyproject.toml
examples/: basic_usage.py
src/: __init__.py  index.py
src/chroma_memory_index/: __init__.py  cli.py  collector.py  config.py  core.py  embed.py
tests/: test_cli.py  test_collector.py  test_config.py  test_core.py  test_embed.py
